Updated meta tags for page shell.

--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Home | Romeo Bagunu</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <meta content="Personal site for KC web developer Romeo Bagunu." name="description">
+    <meta content="Web Development, Full Stack, .NET" name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
