--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -73,63 +73,85 @@
 
                 <div class="section-title">
                     <h2>Resume</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+
+                <div class="row">
+                    <h4>Summary</h4>
+                    <p><em>Lorem Ipsum</em></p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6">
-                        <h3 class="resume-title">Sumary</h3>
-                        <div class="resume-item pb-0">
-                            <h4>Alice Barkley</h4>
-                            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-                            <p>
-                                <ul>
-                                    <li>Portland par 127,Orlando, FL</li>
-                                    <li>(123) 456-7891</li>
-                                    <li>alice.barkley@example.com</li>
-                                </ul>
-                            </p>
+                        <h3 class="resume-title">TECHNICAL TRAINING &#38; EDUCATION</h3>
+                        <div class="resume-item">
+                            <h4>Full Stack Web Developer Program</h4>
+                            <h5>Anticipated Graduation 04/2022</h5>
+                            <p><em>Centriq Training, Kansas City, MO (Remote)</em></p>
+                            <ul>
+                                <li>
+                                    MVC Framework
+                                </li>
+                                <li>
+                                    Troubleshooting &#38; Debugging
+                                </li>
+                                <li>
+                                    Source Control
+                                </li>
+                                <li>
+                                    Agile / Scrume (created Team Project)
+                                </li>
+                                <li>
+                                    Website Deployment
+                                </li>
+                                <li>
+                                    Pair Programming
+                                </li>
+                                <li>
+                                    Code Review
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Bachelor of Political Science</h4>
+                            <h5>08/2017 - 12/2020</h5>
+                            <p><em>University of Missouri, Kansas City</em></p>
+                            <ul>
+                                <li>
+                                    GPA: 3.99
+                                </li>
+                                <li>
+                                    Graduated Summa Cum Laude
+                                </li>
+                            </ul>
                         </div>
 
-                        <h3 class="resume-title">Education</h3>
-                        <div class="resume-item">
-                            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                            <h5>2015 - 2016</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-                        </div>
-                        <div class="resume-item">
-                            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                            <h5>2010 - 2014</h5>
-                            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-                        </div>
                     </div>
                     <div class="col-lg-6">
-                        <h3 class="resume-title">Professional Experience</h3>
+                        <h3 class="resume-title">WORK EXPERIENCE</h3>
                         <div class="resume-item">
-                            <h4>Senior graphic design specialist</h4>
-                            <h5>2019 - Present</h5>
-                            <p><em>Experion, New York, NY </em></p>
+                            <h4>Technical Support Administrator</h4>
+                            <h5>06/2021 - Current</h5>
+                            <p><em>Living Faith Bible Institute, Kansas City, MO</em></p>
                             <p>
                                 <ul>
-                                    <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                    <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                    <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                    <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                    <li>Troubleshoot and aid students and staff with technical issues</li>
+                                    <li>Oversee the streaming and recording of lecture content</li>
+                                    <li>Coordinate a team of audio/visual support volunteers</li>
+                                    <li>Assist in the management of the school's LMS (Moodle) and accounts (via Microsoft 365)</li>
                                 </ul>
                             </p>
                         </div>
                         <div class="resume-item">
-                            <h4>Graphic design specialist</h4>
-                            <h5>2017 - 2018</h5>
-                            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                            <h4>OST Program Director</h4>
+                            <h5>08/2020 - 01/2022</h5>
+                            <p><em>Johnson County Park 	&#38; Recreation District, Olathe, KS</em></p>
                             <p>
                                 <ul>
-                                    <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                                    <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                                    <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                                    <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                                    <li>Operated safe, engaging, and nurturing programming for children in before-and-after-school programs and summer camps.</li>
+                                    <li>Supervised up to 60 children while delegating to 8 seasonal employees.</li>
+                                    <li>Corresponded with parents, school faculty, and supervisors on a daily basis via email, in-person, and over the phone communication.</li>
+                                    <li>Allocated a monthly budget for supplies and snacks.</li>
+                                    <li>Planned and executed daily activities, monthly lesson plans, and field trips.</li>
                                 </ul>
                             </p>
                         </div>
