--- a/PersonalSite/about.html
+++ b/PersonalSite/about.html
@@ -59,7 +59,7 @@
 
             <div class="header-social-links">
                 <a href="https://www.linkedin.com/in/romeo-bagunu/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/romeobagunu" target="_blank" class="twitter" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/romeobagunu" target="_blank" class="twitter"><i class="bi bi-github"></i></a>
             </div>
 
         </div>
@@ -76,21 +76,40 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4">
-                        <img src="assets/img/profile-pic.jpg" class="img-fluid" alt="">
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <img src="assets/img/profile-pic.jpg" alt="Profile picture of Romeo Bagunu" class="img-thumbnail" style="max-height: 300px">
                     </div>
-                    <div class="col-lg-8 pt-4 pt-lg-0 content">
+                    <div class="col-lg-8 p-2 mt-sm-2">
                         <h3>Romeo Bagunu</h3>
                         <p class="fst-italic">
-                            Hey there! My name is Romeo, and for the past couple years, I have been working in child care as a Program Director. I learned some key professional skills as a manager and a supervisor, like teamwork, problem solving, and communication. I loved working with kids so much, but I hit a ceiling in my career there.
+                            Hey there! My name is Romeo, and for the past couple years, I have been working in child care as a Program Director. During that time, I learned key professional skills as a manager and a supervisor, like teamwork, problem solving, and communication. I loved working with kids so much, but I hit a ceiling in my career there.
                             <br />
-                            In my search for new opportunities, I realized that I could take a longtime hobby and interest in technology into a passion and a career in that field of work. That's when I was referred to Centriq's Full Stack Web Developer program, where I have deeply enjoyed learning languages in the .NET Stack and immediately applying them to projects.
+                            In my search for new opportunities, I realized that I could turn a longtime hobby and interest in technology into a passion and a career in that field of work. That's when I was referred to Centriq's Full Stack Web Developer program, where I have deeply enjoyed learning languages in the .NET Stack and immediately applying them to projects. Check out my portfolio to see what I've learned in action!
                         </p>
                     </div>
                 </div>
             </div>
         </section><!-- End About Section -->
-        <!-- TODO: Add Testimonials. -->
+        <section class="pt-0">
+            <div class="container" data-aos="fade-up">
+                <div class="section-title">
+                    <h2>Technical Skills</h2>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <strong>Front End:</strong> HTML5, JavaScript, jQuery, jQueryUI, CSS3, Responsive/Mobile Web Development,
+                        Bootstrap, ReactJS
+                    </div>
+                    <div class="col-lg-4">
+                        <strong>Middle Tier:</strong> C#.NET, ASP.NET, LINQ, MVC, EF, ASP.NET Web API
+                    </div>
+                    <div class="col-lg-4">
+                        <strong>Back End:</strong> ADO.NET, SQL, SQL Server
+                    </div>
+                </div>
+                <div class="pt-4 text-center"><strong>Tools:</strong> Visual Studio, Visual Studio Code, SSMS</div>
+            </div>
+        </section>
 
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
