Fixed Section Title and Fade Up on classmates.html. Renamed custom CSS file to custom.css and linked to all pages for final touch-ups.

--- a/PersonalSite/about.html
+++ b/PersonalSite/about.html
@@ -27,6 +27,9 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Custom CSS File -->
+    <link href="assets/css/custom.css" rel="stylesheet" />
+
     <!-- =======================================================
     * Template Name: Kelly - v4.7.0
     * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
