--- a/PersonalSite/classmates.html
+++ b/PersonalSite/classmates.html
@@ -27,8 +27,8 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- Classmates CSS File -->
-    <link href="assets/css/classmates.css" rel="stylesheet" />
+    <!-- Custom CSS File -->
+    <link href="assets/css/custom.css" rel="stylesheet" />
 
     <!-- =======================================================
     * Template Name: Kelly - v4.7.0
@@ -69,8 +69,10 @@
 
     </header><!-- End Header -->
     <main id="main">
-        <section id="classmates-section" class="container">
-            <h2 class="section-title">Centriq Classmates</h2>
+        <section id="classmates-section" class="container" data-aos="fade-up">
+            <div class="section-title">
+                <h2>Centriq Classmates</h2>
+            </div>
             <div class="row py-5 d-flex justify-content-center">
                 <div class="col-lg-4 col-md-6 d-flex justify-content-center flex-column">
                     <div class="mx-auto">
