--- a/PersonalSite/resume.html
+++ b/PersonalSite/resume.html
@@ -27,6 +27,9 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Custom CSS File -->
+    <link href="assets/css/custom.css" rel="stylesheet" />
+
     <!-- =======================================================
     * Template Name: Kelly - v4.7.0
     * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
