Added a Hero section at the bottom of about.html to link them to my Portfolio page.

--- a/PersonalSite/about.html
+++ b/PersonalSite/about.html
@@ -70,7 +70,7 @@
     </header><!-- End Header -->
     <main id="main">
 
-        <!-- ======= About Section ======= -->
+        <!-- ======= About Me Section ======= -->
         <section id="about" class="about">
             <div class="container" data-aos="fade-up">
 
@@ -93,8 +93,9 @@
                 </div>
             </div>
         </section><!-- End About Section -->
-        <section class="pt-0">
-            <div class="container" data-aos="fade-up">
+        <!-- ======= Technical Skills Section ======= -->
+        <section class="pt-0" data-aos="fade-up">
+            <div class="container">
                 <div class="section-title">
                     <h2>Technical Skills</h2>
                 </div>
@@ -122,8 +123,20 @@
                     </div>
                 </div>
             </div>
+        </section><!-- End Technical Skills section -->
+        <!-- ======= Portfolio Hero ======= -->
+        <section class="pt-0">
+            <div class="container">
+            <hr />
+                <div class="p-3">
+                    <h2>Full Stack Development!</h2>
+                    <p>Don't just take my word for it! You can check out my development skills on my Portfolio page.</p>
+                    <a class="btn-hero" href="portfolio.html">Portfolio</a>
+                </div>
+            <hr />
+            </div>
         </section>
-
+        <!-- End Portfolio Hero -->
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
